--- a/Portofoiliu final/index.html
+++ b/Portofoiliu final/index.html
@@ -121,7 +121,7 @@
                       <a href="https://github.com/Diana0103/Proiect-Final-Diana"> Vizualizare GitHub</a>
                     </div>
                      <div class="btn btn-primary">
-                      <a href="https://proiect-final-diana.vercel.app/"> Vizualizare site</a>
+                      <a href="https://proiect-final-dianaa.vercel.app/"> Vizualizare site</a>
                     </div>
                     
                 </div>
